--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-<<<<<<< HEAD
 env/
-=======
->>>>>>> 74e960b2a06b164ce1dc4beb9c70819dfd405234
 build/
 develop-eggs/
 dist/
@@ -27,10 +24,6 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-<<<<<<< HEAD
-=======
-MANIFEST
->>>>>>> 74e960b2a06b164ce1dc4beb9c70819dfd405234
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -52,10 +45,7 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-<<<<<<< HEAD
-=======
 .pytest_cache/
->>>>>>> 74e960b2a06b164ce1dc4beb9c70819dfd405234
 
 # Translations
 *.mo
@@ -64,10 +54,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-<<<<<<< HEAD
-=======
 db.sqlite3
->>>>>>> 74e960b2a06b164ce1dc4beb9c70819dfd405234
 
 # Flask stuff:
 instance/
@@ -94,7 +81,6 @@ celerybeat-schedule
 # SageMath parsed files
 *.sage.py
 
-<<<<<<< HEAD
 # dotenv
 .env
 
@@ -102,7 +88,6 @@ celerybeat-schedule
 .venv
 venv/
 ENV/
-=======
 # Environments
 .env
 .venv
@@ -111,7 +96,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
->>>>>>> 74e960b2a06b164ce1dc4beb9c70819dfd405234
 
 # Spyder project settings
 .spyderproject
@@ -126,22 +110,16 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-<<<<<<< HEAD
 # macOS
 .DS_Store
 
-=======
->>>>>>> 74e960b2a06b164ce1dc4beb9c70819dfd405234
 # Needed for binder
 .config/
 .ipython/
 .local/
 .jupyter/
-<<<<<<< HEAD
-=======
-.DS_Store
->>>>>>> 74e960b2a06b164ce1dc4beb9c70819dfd405234
 .bash_logout
 .bashrc
 .gitconfig
 .profile
+raw_data/*
